# superhtml

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES  build.zig  build.zig.zon
.github/ISSUE_TEMPLATE/: config.yml  crash.yml  error_message.yml  other.yml
.github/workflows/: ci.yml  gh-pages.yml
editors/bbedit/: README.md
editors/emacs/: README.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package-wasm.json  package.json  superhtml.language-configuration.json  tsconfig.json
src/: Ast.zig  cli.zig  css.zig  errors.zig  example.zig  fuzz.c  fuzz.zig  generator.zig  html.zig  interpreter.zig  main.zig  root.zig  sitter.zig  template.zig  tracy.zig  vm.zig  wasm.zig
src/cli/: check.zig  fmt.zig  interface.zig  logging.zig  lsp.zig
src/css/: Ast.zig  Tokenizer.zig
src/fuzz/: 3-01.html  5-01.html  afl.c  (+2 more)
tree-sitter-superhtml/: .editorconfig  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-superhtml/bindings/c/: tree-sitter-html.h  tree-sitter-html.pc.in
tree-sitter-superhtml/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-superhtml/bindings/node/: binding.cc
tree-sitter-superhtml/bindings/python/tree_sitter_html/: __init__.py  binding.c
tree-sitter-superhtml/bindings/rust/: build.rs  lib.rs
tree-sitter-superhtml/queries/: highlights.scm
tree-sitter-superhtml/src/: grammar.json  parser.c  scanner.c  tag.h
tree-sitter-superhtml/test/corpus/: main.txt  superhtml.txt
(+166 files in other folders)
