[package]
name = "tree-sitter-superhtml"
description = "SuperHTML TreeSitter Grammar"
version = "0.20.3"
authors = ["Loris Cro"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "html", "superhtml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/kristoff-it/superhtml/tree-sitter-superhtml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.87"
