[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-superhtml"
description = "SuperHTML TreeSitter Grammar"
version = "0.20.3"
keywords = ["incremental", "parsing", "tree-sitter", "html"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[[project.authors]]
name = "Loris Cro"

[project.urls]
Homepage = "https://github.com/kristoff-it/superhtml"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
